-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.0 Beta 2, 5.12.0 Beta 3
-
None
-
macOS 10.14
-
-
1f90c16845dfda2639712354ded1121b5c999ef3 (qt/qtwebengine/5.12)
Edit: beta 3 has partially solved this issue, but the issue still exists in the Japanese keyboard layout - please see my latest comment.
To reproduce, using the markdowneditor sample app, add an <input> element, then in the input on the right, type
option+e then e
Instead of just an é, it inserts eé. Same for other dead key combinations option+u, u - it yields uü instead of ü.
Problem does not exist in Qt 5.11.
- resulted from
-
QTBUG-69442 Event 'key' attribute is incorrect when multiple modifier keys pressed
-
- Closed
-
For Gerrit Dashboard: QTBUG-71454 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
244271,4 | Don't use Qt::Key fallback for WebKeyboardEvent.text | 5.12 | qt/qtwebengine | Status: MERGED | -2 | 0 |