Don't use Qt::Key fallback for WebKeyboardEvent.text

Fixes: QTBUG-71454
Change-Id: I80a530bea69da2e8bfe0b99206f590c0ea389796
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>